tests/ui/pin_project/repr-packed-name-value.rs
use pin_project::pin_project;

#[repr(packed = "")] //~ ERROR E0552
struct S1 {
    f: (),
}

#[pin_project]
#[repr(packed = "")] //~ ERROR E0552
struct S2 {
    f: (),
}

fn main() {}
